#
#   $Id$
#
#   This is a log of major user-visible changes in each release
#

(unreleased)

    - Add support for decoding of obscured maintainer addresses.
      We support two types of obscured addresses in Portfile maintainers field:
         (1) username ==> implies username@macports.org
         (2) subdomain.tld:username ==> implies username@subdomain.tld
      These are unobscured by port info, and by port submit during the submission process,
      but are left obscured in the Portfile to avoid accidental disclosure.
      (jberry r25795).

    - Bugfix startup item generation so that launchd.plists are disabled
      by default, as we claim they are in our documentation. (jberry r25785).

    - Update adduser/addgroup to use dscl instead of niutil. Also add support
      for realname key in addgroup (ticket #11012, eridius r25586).

    - Make a correction to port(1)'s determination of whether or not a port has
      been updated by making it compare ${version} and then ${revision} rather
      than a single comparison of the compound ${version}_${revision}; the
      latter reports 2.01_2 to be newer than 2.01.01a25_0 because, at the fifth
      character, `_' comes after `.' in ASCII lexicographic order.
      (boeyms in r25310)

Release 1.4.42 (17-May-2007 tagged at r25296 by jberry)

    - Fix reinplace, broken in 1.4.41 (eridius r25285).

Release 1.4.41 (16-May-2007 tagged at r25266 by jberry):

    - `port info` now supports new --index flag for using old behaviour (eridius r25256).

    - `port info` now opens the Portfile and displays up-to-date information.
      This allows information about variants to be displayed (eg. dependencies).
      Also allow `port info` to default to current directory if no name is provided
      (eridius r25255).
    
    - Add -E flag to reinplace, does the same thing as in sed (eridius r25251).

    - Add support for [nosync] flag in sources.conf to prevent a source from syncing