@@ -266,6 +266,9 @@ proc dportinit {{up_ui_options {}} {up_options {}} {up_variations {}}} {
    	global darwinports::variants_conf
    	global darwinports::xcodebuildcmd
    	global darwinports::xcodeversion
+    
+    # Set the system encoding to utf-8
+    encoding system utf-8
    	
     # Ensure that the macports user directory exists if HOME is defined
     if {[info exists env(HOME)]} {
@@ -298,7 +301,6 @@ proc dportinit {{up_ui_options {}} {up_options {}} {up_variations {}}} {
 		if [file exists $file] {
 			set portconf $file
 			set fd [open $file r]
-			fconfigure $fd -encoding utf-8
 			while {[gets $fd line] >= 0} {
 				if {[regexp {^(\w+)([ \t]+(.*))?$} $line match option ignore val] == 1} {
 					if {[regexp {^"(.*)"[ \t]*$} $val match val2] == 1} {
@@ -320,7 +322,6 @@ proc dportinit {{up_ui_options {}} {up_options {}} {up_variations {}}} {
 	set per_user "${macports_user_dir}/user.conf"
 	if [file exists $per_user] {
 		set fd [open $per_user r]
-		fconfigure $fd -encoding utf-8
 		while {[gets $fd line] >= 0} {
 			if {[regexp {^(\w+)([ \t]+(.*))?$} $line match option ignore val] == 1} {
 				if {[lsearch $user_options $option] >= 0} {
@@ -335,7 +336,6 @@ proc dportinit {{up_ui_options {}} {up_options {}} {up_variations {}}} {
         return -code error "sources_conf must be set in $dports_conf_path/ports.conf or in $macports_user_dir/ports.conf"
     }
     set fd [open $sources_conf r]
-    fconfigure $fd -encoding utf-8
     while {[gets $fd line] >= 0} {
         set line [string trimright $line]
         if {![regexp {^\s*#|^$} $line]} {
@@ -363,7 +363,6 @@ proc dportinit {{up_ui_options {}} {up_options {}} {up_variations {}}} {
 	if {[info exists variants_conf]} {
 		if {[file exist $variants_conf]} {
 			set fd [open $variants_conf r]
-			fconfigure $fd -encoding utf-8
 			while {[gets $fd line] >= 0} {
 				set line [string trimright $line]
 				if {![regexp {^[\ \t]*#.*$|^$} $line]} {
@@ -1290,7 +1289,6 @@ proc dportsearch {pattern {case_sensitive yes} {matchstyle regexp} {field name}}
 			if {[catch {set fd [open [darwinports::getindex $source] r]} result]} {
 				ui_warn "Can't open index file for source: $source"
 			} else {
-			    fconfigure $fd -encoding utf-8
 				incr found 1
 				while {[gets $fd line] >= 0} {
 					array unset portinfo
